--- a/platformio.ini
+++ b/platformio.ini
@@ -18,5 +18,11 @@ monitor_speed = 115200
 
 lib_deps = 
     ivanseidel/ArduinoThread@^2.1.1
-    bodmer/TFT_eSPI@^2.5.33
+    bodmer/TFT_eSPI@^2.5.43
     lennarthennigs/Button2@^2.2.4
+
+
+build_flags =
+    ; -DTFT_eSPI_USER_SETUP_DISABLE
+    -include src/config/TFTConfig.h
+    -DTOUCH_CS=-1
