--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,9 @@ platform = espressif32
 board = nodemcu-32s
 framework = arduino
 
+platform_packages = 
+    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.4
+
 upload_speed = 1000000
 monitor_speed = 115200
 
