--- a/platformio.ini
+++ b/platformio.ini
@@ -27,5 +27,25 @@ lib_deps =
 
 build_flags =
     ; -DTFT_eSPI_USER_SETUP_DISABLE
-    -include src/config/TFTConfig.h
+    ; -include src/config/TFTConfig.h
     -DTOUCH_CS=-1
+
+    -D ST7789_DRIVER
+    -D TFT_WIDTH=240
+    -D TFT_HEIGHT=240
+    -D TFT_MOSI=17
+    -D TFT_SCLK=18
+    -D TFT_DC=5
+    -D TFT_RST=19
+    -D TFT_BL=22
+    -D LOAD_GLCD
+    -D LOAD_FONT2
+    -D LOAD_FONT4
+    -D LOAD_FONT6
+    -D LOAD_FONT7
+    -D LOAD_FONT8
+    -D LOAD_GFXFF
+    -D SMOOTH_FONT
+    -D SPI_FREQUENCY=27000000
+    -D SPI_READ_FREQUENCY=20000000
+    -D SPI_TOUCH_FREQUENCY=2500000
