--- a/platformio.ini
+++ b/platformio.ini
@@ -47,5 +47,5 @@ build_flags =
     -D LOAD_GFXFF
     -D SMOOTH_FONT
     -D SPI_FREQUENCY=27000000
-    -D SPI_READ_FREQUENCY=20000000
-    -D SPI_TOUCH_FREQUENCY=2500000
+    ; -D SPI_READ_FREQUENCY=20000000
+    ; -D SPI_TOUCH_FREQUENCY=2500000
