--- a/platformio.ini
+++ b/platformio.ini
@@ -49,3 +49,14 @@ build_flags =
     -D SPI_FREQUENCY=27000000
     ; -D SPI_READ_FREQUENCY=20000000
     ; -D SPI_TOUCH_FREQUENCY=2500000
+
+
+
+[env:native]
+platform = native
+framework = 
+lib_deps = 
+    googletest
+
+
+
