--- a/platformio.ini
+++ b/platformio.ini
@@ -26,10 +26,8 @@ lib_deps =
 
 
 build_flags =
-    ; -DTFT_eSPI_USER_SETUP_DISABLE
     ; -include src/config/TFTConfig.h
-    -DTOUCH_CS=-1
-
+    -D USER_SETUP_LOADED
     -D ST7789_DRIVER
     -D TFT_WIDTH=240
     -D TFT_HEIGHT=240
@@ -38,6 +36,7 @@ build_flags =
     -D TFT_DC=5
     -D TFT_RST=19
     -D TFT_BL=22
+    -D TOUCH_CS=-1
     -D LOAD_GLCD
     -D LOAD_FONT2
     -D LOAD_FONT4
