--- a/platformio.ini
+++ b/platformio.ini
@@ -49,6 +49,9 @@ build_flags =
     ; -D SPI_READ_FREQUENCY=20000000
     ; -D SPI_TOUCH_FREQUENCY=2500000
 
+    -D WIFI_SSID=\"Mi\"
+    -D WIFI_PASSWORD=\"12345678\"
+
 
 
 [env:native]
