--- a/platformio.ini
+++ b/platformio.ini
@@ -17,8 +17,8 @@ platform = espressif32
 board = nodemcu-32s
 framework = arduino
 
-platform_packages = 
-    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#2.0.2
+; platform_packages = 
+;     framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#2.0.2
 
 upload_speed = 1000000
 monitor_speed = 115200
@@ -27,9 +27,10 @@ lib_deps =
     ivanseidel/ArduinoThread@^2.1.1
     bodmer/TFT_eSPI@^2.5.43
     lennarthennigs/Button2@^2.2.4
-
+    lvgl/lvgl @ ^9.1.0
 
 build_flags =
+    ; TFT 配置信息
     ; -include src/config/TFTConfig.h
     -D USER_SETUP_LOADED
     -D ST7789_DRIVER
@@ -53,16 +54,27 @@ build_flags =
     ; -D SPI_READ_FREQUENCY=20000000
     ; -D SPI_TOUCH_FREQUENCY=2500000
 
+     ; wifi 配置信息
     -D WIFI_SSID=\"Mi\"
     -D WIFI_PASSWORD=\"12345678\"
 
+    ; lvgl 配置信息
+    -I src/config
+    -I .pio/libdeps/nodemcu-32s/lvgl/src
+    -D LV_BUILD_EXAMPLES=1
+    -D LV_USE_DEMO_WIDGETS=1
+    -D LV_USE_DEMO_KEYPAD_AND_ENCODER=1
+    -D LV_USE_DEMO_BENCHMARK=1
+    -D LV_DEMO_BENCHMARK_RGB565A8=1
+    -D LV_USE_DEMO_STRESS=1
+    -D LV_USE_DEMO_MUSIC=1
 
 
-[env:native]
-platform = native
-framework = 
-lib_deps = 
-    googletest
+; [env:native]
+; platform = native
+; framework = 
+; lib_deps = 
+;     googletest
 
 
 
