--- a/platformio.ini
+++ b/platformio.ini
@@ -27,7 +27,7 @@ lib_deps =
     ivanseidel/ArduinoThread@^2.1.1
     bodmer/TFT_eSPI@^2.5.43
     lennarthennigs/Button2@^2.2.4
-    lvgl/lvgl @ ^9.1.0
+    lvgl/lvgl @ ^8.3.0
 
 build_flags =
     ; TFT 配置信息
@@ -60,21 +60,13 @@ build_flags =
 
     ; lvgl 配置信息
     -I src/config
-    -I .pio/libdeps/nodemcu-32s/lvgl/src
-    -D LV_BUILD_EXAMPLES=1
-    -D LV_USE_DEMO_WIDGETS=1
-    -D LV_USE_DEMO_KEYPAD_AND_ENCODER=1
-    -D LV_USE_DEMO_BENCHMARK=1
-    -D LV_DEMO_BENCHMARK_RGB565A8=1
-    -D LV_USE_DEMO_STRESS=1
-    -D LV_USE_DEMO_MUSIC=1
 
 
-; [env:native]
-; platform = native
-; framework = 
-; lib_deps = 
-;     googletest
+[env:native]
+platform = native
+framework = 
+lib_deps = 
+    googletest
 
 
 
