--- a/platformio.ini
+++ b/platformio.ini
@@ -27,7 +27,7 @@ lib_deps =
     ivanseidel/ArduinoThread@^2.1.1
     bodmer/TFT_eSPI@^2.5.43
     lennarthennigs/Button2@^2.2.4
-    lvgl/lvgl @ ^8.3.0
+    lvgl/lvgl @ ^9.0.0
 
 build_flags =
     ; TFT 配置信息
@@ -60,7 +60,9 @@ build_flags =
 
     ; lvgl 配置信息
     -I src/config
+    -D LV_DISPLAY_ROTATION=LV_DISPLAY_ROTATION_180  
 
+build_src_filter = +<*> +<../.pio/libdeps/nodemcu-32s/lvgl/demos>
 
 [env:native]
 platform = native
