--- a/platformio.ini
+++ b/platformio.ini
@@ -17,9 +17,6 @@ platform = espressif32
 board = nodemcu-32s
 framework = arduino
 
-; platform_packages = 
-;     framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#2.0.2
-
 upload_speed = 1000000
 monitor_speed = 115200
 
@@ -27,11 +24,10 @@ lib_deps =
     ivanseidel/ArduinoThread@^2.1.1
     bodmer/TFT_eSPI@^2.5.43
     lennarthennigs/Button2@^2.2.4
-    lvgl/lvgl @ ^9.0.0
+    lvgl/lvgl@^9.0.0
 
 build_flags =
     ; TFT 配置信息
-    ; -include src/config/TFTConfig.h
     -D USER_SETUP_LOADED
     -D ST7789_DRIVER
     -D TFT_WIDTH=240
@@ -62,10 +58,16 @@ build_flags =
     -I src/config
     -D LV_DISPLAY_ROTATION=LV_DISPLAY_ROTATION_180  
 
-build_src_filter = +<*> +<../.pio/libdeps/nodemcu-32s/lvgl/demos>
+
+; lvgl demo 工程加入编译
+build_src_filter = 
+    +<*> 
+    +<../.pio/libdeps/nodemcu-32s/lvgl/demos>
+
+
 
 [env:native]
-platform = native
+platform = native@^1.1.3
 framework = 
 lib_deps = 
     googletest
